- working on the button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-  <button type="button" id="msgButton">Start Messages</button>
+  <button id="message-toggle" (click)="onMessageToggleClick()">{{buttonText}}</button>
 </div>
 
 <div class="footer">
