--- a/src/app/shared/message-list/message-list.component.html
+++ b/src/app/shared/message-list/message-list.component.html
@@ -1,3 +1,3 @@
-<p>
-  message-list works!
-</p>
+<ul>
+  <app-message-box *ngFor="let message of messages; let i=index" [message]="message" [index]="i" (closed)="removeMessage($event.index)"></app-message-box>
+</ul>
