- it's getting there

--- a/src/app/shared/message-box/message-box.component.html
+++ b/src/app/shared/message-box/message-box.component.html
@@ -1,4 +1,6 @@
 <li>
-  <span id="message">{{message}}</span>
-  <span id="close-button" (click)="close()">Close</span>
+  <paper-material elevation="1">
+    <span id="message">{{message}}</span>
+    <span id="close-button" (click)="close()">Close</span>
+  </paper-material>
 </li>
