--- a/src/app/shared/message-box/message-box.component.css
+++ b/src/app/shared/message-box/message-box.component.css
@@ -1,3 +1,17 @@
 li {
   list-style: none;
+  margin: 25px;
+}
+
+paper-material {
+  width: 30%;
+  height: 50px;
+  padding: 10px;
+  display: table-cell;
+  vertical-align: middle;
+  background-color: white;
+}
+
+#close-button {
+  float: right;
 }
