- styled it up - split closed event into closed/expired - polishing

--- a/src/app/shared/message-box/message-box.component.css
+++ b/src/app/shared/message-box/message-box.component.css
@@ -4,14 +4,23 @@ li {
 }
 
 paper-material {
-  width: 30%;
+  width: 520px;
   height: 50px;
   padding: 10px;
   display: table-cell;
   vertical-align: middle;
-  background-color: white;
+  background-color: lightgrey;
+}
+
+#message {
+  width: 430px;
+  float: left;
 }
 
 #close-button {
+  width: 60px;
   float: right;
+  text-align: right;
+  font-weight: bold;
+  text-transform: uppercase;
 }
