--- a/src/app/shared/message-box/message-box.component.html
+++ b/src/app/shared/message-box/message-box.component.html
@@ -1,6 +1,6 @@
 <li>
   <paper-material elevation="1">
-    <span id="message">{{message}}</span>
-    <span id="close-button" (click)="close()">Close</span>
+    <div id="message">{{message}}</div>
+    <div id="close-button" (click)="close()">Close</div>
   </paper-material>
 </li>
