--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
-<div>
+<div class="column small-12 medium-12 large-12">
   <div id="content">
-    <h1>LLamasoft Message Exercise
-    </h1>
+    <h1>LLamasoft Message Exercise</h1>
 
     <div>
-
       <p>
         Implement a messaging system to replace the random alert boxes that come up. The messaging system
         should meet the following criteria
@@ -19,23 +17,26 @@
         </li>
         <li>Messages should have a close or delete box to dismiss the message before the fade out</li>
       </ul>
-      <p>
-        In addition to the above features, implement other updates you think might be helpful. E.g. Add an indicator
-        to let the user know that the messages are running in addition to the text change on the button, update the
-        layout to make the page more readable, etc. Feel free to use
-        any third party libraries you find helpful. jQuery and underscore are already referenced.
-      </p>
     </div>
+    <p>
+      In addition to the above features, implement other updates you think might be helpful. E.g. Add an indicator
+      to let the user know that the messages are running in addition to the text change on the button, update the
+      layout to make the page more readable, etc. Feel free to use
+      any third party libraries you find helpful. jQuery and underscore are already referenced.
+    </p>
 
-    <div>
-      <paper-button id="message-toggle" (click)="onMessageToggleClick()">{{buttonText}}</paper-button>
+    <div class="small-centered medium-centered large-centered column small-12 medium-8 large-8">
+      <paper-button id="message-toggle" (click)="onMessageToggleClick()">
+        {{buttonText}}
+      </paper-button>
     </div>
 
     <div class="footer">
       <span>&copy; LLamasoft 2016</span>
     </div>
   </div>
-  <div id="message-list">
+  <div id="message-list" class="column small-12 medium-12 large-12">
     <app-message-list [messages]="messages"></app-message-list>
   </div>
 </div>
+<paper-toast text="Messages are running" duration="Infinity" [opened]="running"></paper-toast>
