- fixed formatting for a quote - other polish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
       <span>&copy; LLamasoft 2016</span>
     </div>
   </div>
-  <div id="message-list" class="column small-12 medium-12 large-12">
+  <div id="message-list">
     <app-message-list [messages]="messages"></app-message-list>
   </div>
 </div>
